@@ -1,8 +1,16 @@
-esg-srm
+data-clearinghouse
 =======
 
-esg-srm
 
-NOTE: There are two bugs in setup
-1 - must add ivy*.jar to $ANT_HOME/lib
-2 - create etc/etc in main dir
+PREREQUISITE NOTES:  
+- must have ant version 1.8.1 or above
+- must add ivy*.jar to $ANT_HOME/lib
+
+
+To run the transformation main class:
+ant make_jar
+
+cd build
+
+java -Djava.ext.dirs=../lib:../lib/fetched/compile MetadataTransformationMain
+
